force-app/main/default/objects/Activity/fields/Booked_By__c.field-meta.xml
<CustomField>
    <fullName>Booked_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field populates Booker&apos;s name when meeting is booked by Chili Piper</description>
    <label>Booked By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Activities</relationshipName>
    <type>Lookup</type>
</CustomField>