force-app/main/default/objects/Activity/fields/CloseDate__c.field-meta.xml
<CustomField>
    <fullName>CloseDate__c</fullName>
    <description>Timestamp of when the activity is closed.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Close Date</label>
    <type>DateTime</type>
</CustomField>