force-app/main/default/objects/Activity/fields/Duration_in_Hours__c.field-meta.xml
<CustomField>
    <fullName>Duration_in_Hours__c</fullName>
    <label>Duration in Hour(s)</label>
    <precision>14</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>