force-app/main/default/objects/Activity/fields/Feature_Request__c.field-meta.xml
<CustomField>
    <fullName>Feature_Request__c</fullName>
    <description>Note: The field is re-used in Ardius to identify auto generated Tasks, Since the Activity field limit is almost crossed in org.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Feature Request</label>
    <type>TextArea</type>
</CustomField>