force-app/main/default/objects/Activity/fields/Feature_Request_Type__c.field-meta.xml
<CustomField>
    <fullName>Feature_Request_Type__c</fullName>
    <description>This is related to the Feature Request field. Select all types that apply.</description>
    <inlineHelpText>This is related to the Feature Request field. Select all types that apply.</inlineHelpText>
    <label>Feature Request Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Time Tracking / PTO</fullName>
            </value>
            <value>
                <fullName>Payroll, Expenses/Reimbursements</fullName>
            </value>
            <value>
                <fullName>Reporting</fullName>
            </value>
            <value>
                <fullName>Comms (emails/todo notifications)</fullName>
            </value>
            <value>
                <fullName>Permissions, Org chart, Departments</fullName>
            </value>
            <value>
                <fullName>Performance tools</fullName>
            </value>
            <value>
                <fullName>Hiring / Dismissing tools</fullName>
            </value>
            <value>
                <fullName>Gusto Managed Benefits (Benefits)</fullName>
            </value>
            <value>
                <fullName>BYB (Benefits)</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>