force-app/main/default/objects/Activity/fields/Genesys_Ani__c.field-meta.xml
<CustomField>
    <fullName>Genesys_Ani__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Genesys Ani</label>
    <length>20</length>
    <type>Text</type>
</CustomField>