force-app/main/default/objects/Activity/fields/Genesys_Interaction_Id__c.field-meta.xml
<CustomField>
    <fullName>Genesys_Interaction_Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Genesys Interaction Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>