force-app/main/default/objects/Activity/fields/Genesys_Queue_Name__c.field-meta.xml
<CustomField>
    <fullName>Genesys_Queue_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Genesys Queue Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>