force-app/main/default/objects/Activity/fields/Marketing_Source__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Source__c</fullName>
    <formula>Lead__r.Marketing_Source__c</formula>
    <label>Marketing Source</label>
    <type>Text</type>
</CustomField>