force-app/main/default/objects/Activity/fields/Next_Business_Day__c.field-meta.xml
<CustomField>
    <fullName>Next_Business_Day__c</fullName>
    <description>This field is populated by the trigger so that it can be used to create followup tasks on the next business day.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Next Business Day</label>
    <type>Date</type>
</CustomField>