force-app/main/default/objects/Activity/fields/Owner_Assigned_as_User__c.field-meta.xml
<CustomField>
    <fullName>Owner_Assigned_as_User__c</fullName>
    <description>This will show the timestamp of when the User is assigned to the task</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Owner Assigned as User</label>
    <type>DateTime</type>
</CustomField>