force-app/main/default/objects/Activity/fields/Owner_Department__c.field-meta.xml
<CustomField>
    <fullName>Owner_Department__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Owner Department</label>
    <length>255</length>
    <type>Text</type>
</CustomField>