force-app/main/default/objects/Activity/fields/Owner_Division__c.field-meta.xml
<CustomField>
    <fullName>Owner_Division__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Owner Division</label>
    <length>255</length>
    <type>Text</type>
</CustomField>