force-app/main/default/objects/Activity/fields/Owner_Related_To_Id_NICE__c.field-meta.xml
<CustomField>
    <fullName>Owner_Related_To_Id_NICE__c</fullName>
    <description>Data received from NICE CXOne. Format of this field Owner Id + &quot;-&quot; + Related To Id. We parse data from this field and set OwnerId and WhatId respectively.</description>
    <inlineHelpText>Data received from NICE CXOne. Format of this field Owner Id + &quot;-&quot; + Related To Id. We parse data from this field and set OwnerId and WhatId respectively.</inlineHelpText>
    <label>Owner Related To ID (NICE)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>