force-app/main/default/objects/Activity/fields/Owner_Title__c.field-meta.xml
<CustomField>
    <fullName>Owner_Title__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Owner Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>