force-app/main/default/objects/Activity/fields/Partner_Sales_Task_Type__c.field-meta.xml
<CustomField>
    <fullName>Partner_Sales_Task_Type__c</fullName>
    <label>Partner Sales Task Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Qualification Call</fullName>
            </value>
            <value>
                <fullName>Demo</fullName>
            </value>
            <value>
                <fullName>New Client Commit</fullName>
            </value>
            <value>
                <fullName>Conversion Call</fullName>
            </value>
            <value>
                <fullName>New Partner Onboarding</fullName>
            </value>
            <value>
                <fullName>Firm Free Payroll discussion</fullName>
            </value>
            <value>
                <fullName>Account Handoff</fullName>
            </value>
            <value>
                <fullName>Client Demo</fullName>
            </value>
            <value>
                <fullName>Sam Partnership Development</fullName>
            </value>
            <value>
                <fullName>Growth Opportunities</fullName>
            </value>
            <value>
                <fullName>Tier Upsell</fullName>
            </value>
            <value>
                <fullName>HI Intro &amp; Overview</fullName>
            </value>
            <value>
                <fullName>Quarterly Business Review</fullName>
            </value>
            <value>
                <fullName>X-Functional Case</fullName>
            </value>
            <value>
                <fullName>Inbound Call</fullName>
            </value>
            <value>
                <fullName>Prospecting</fullName>
            </value>
            <value>
                <fullName>Strategic Discovery</fullName>
            </value>
            <value>
                <fullName>Ramp</fullName>
            </value>
            <value>
                <fullName>Conversion</fullName>
            </value>
            <value>
                <fullName>Expansion</fullName>
            </value>
            <value>
                <fullName>Admin</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>