force-app/main/default/objects/Activity/fields/Primary_Call_Objective__c.field-meta.xml
<CustomField>
    <fullName>Primary_Call_Objective__c</fullName>
    <description>Field is used to identify Sales versus Onboarding activity and primary objective and discussion for call.</description>
    <inlineHelpText>Please indicate the main objective and discussion for this call.</inlineHelpText>
    <label>Primary Call Objective</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Onboarding</fullName>
            </value>
            <value>
                <fullName>Sales - Upfront Contract</fullName>
            </value>
            <value>
                <fullName>Sales - Discovery</fullName>
            </value>
            <value>
                <fullName>Sales - Pain Funnel</fullName>
            </value>
            <value>
                <fullName>Sales - Budget</fullName>
            </value>
            <value>
                <fullName>Sales - Decision Maker</fullName>
            </value>
            <value>
                <fullName>Sales - Recommendation</fullName>
            </value>
            <value>
                <fullName>Sales - Benefits</fullName>
            </value>
            <value>
                <fullName>Sales - Onboarding RFI/Payroll Blocker</fullName>
            </value>
            <value>
                <fullName>Disqualification Discussion</fullName>
            </value>
            <value>
                <fullName>Qualification - More Information Needed</fullName>
            </value>
            <value>
                <fullName>Onboarding Customer Questions</fullName>
            </value>
            <value>
                <fullName>Company Info Nurturing</fullName>
            </value>
            <value>
                <fullName>Onboarding Nurturing</fullName>
            </value>
            <value>
                <fullName>Calculation Explanation</fullName>
            </value>
            <value>
                <fullName>QRE Updates/Changes</fullName>
            </value>
            <value>
                <fullName>Company Information Changes</fullName>
            </value>
            <value>
                <fullName>Approval Nurturing</fullName>
            </value>
            <value>
                <fullName>Filing Strategy Support</fullName>
            </value>
            <value>
                <fullName>Pricing/Invoicing Discussion</fullName>
            </value>
            <value>
                <fullName>Renewal engagement</fullName>
            </value>
            <value>
                <fullName>Additional Information Request</fullName>
            </value>
            <value>
                <fullName>Accountant Nurture</fullName>
            </value>
            <value>
                <fullName>Section 174 questions</fullName>
            </value>
            <value>
                <fullName>Post Approval Nurturing</fullName>
            </value>
            <value>
                <fullName>Churn Mitigation/Retention</fullName>
            </value>
            <value>
                <fullName>Cross Sell</fullName>
            </value>
            <value>
                <fullName>EOY Retention</fullName>
            </value>
            <value>
                <fullName>Escalation</fullName>
            </value>
            <value>
                <fullName>F90</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>