force-app/main/default/objects/Activity/fields/Queue_Name_CP__c.field-meta.xml
<CustomField>
    <fullName>Queue_Name_CP__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Queue</label>
    <length>100</length>
    <type>Text</type>
</CustomField>