force-app/main/default/objects/Activity/fields/Reason_for_Call__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Call__c</fullName>
    <label>Reason for Call</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ER Flow Walkthrough</fullName>
            </value>
            <value>
                <fullName>Contribution</fullName>
            </value>
            <value>
                <fullName>WP</fullName>
            </value>
            <value>
                <fullName>SBC</fullName>
            </value>
            <value>
                <fullName>Rate Change</fullName>
            </value>
            <value>
                <fullName>Access/Tech Issue</fullName>
            </value>
            <value>
                <fullName>Deadline Extension</fullName>
            </value>
            <value>
                <fullName>Review More Plans</fullName>
            </value>
            <value>
                <fullName>Network Questions</fullName>
            </value>
            <value>
                <fullName>Recert</fullName>
            </value>
            <value>
                <fullName>Moving States</fullName>
            </value>
            <value>
                <fullName>Adding TAdA</fullName>
            </value>
            <value>
                <fullName>Removing TAdA</fullName>
            </value>
            <value>
                <fullName>Changing TAdA Contribution</fullName>
            </value>
            <value>
                <fullName>Change Renewal Date</fullName>
            </value>
            <value>
                <fullName>Change Deductible/OOPM Reset</fullName>
            </value>
            <value>
                <fullName>Carrier Switch</fullName>
            </value>
            <value>
                <fullName>Ancillary Upsell</fullName>
            </value>
            <value>
                <fullName>Custom Quote</fullName>
            </value>
            <value>
                <fullName>Trying To Reach Care</fullName>
            </value>
            <value>
                <fullName>Trying To Reach OA</fullName>
            </value>
            <value>
                <fullName>Trying To Reach MYBC</fullName>
            </value>
            <value>
                <fullName>Trying To Reach Dedicated Advisor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>