force-app/main/default/objects/Activity/fields/Referred_By__c.field-meta.xml
<CustomField>
    <fullName>Referred_By__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Referred By</label>
    <type>Checkbox</type>
</CustomField>