force-app/main/default/objects/Activity/fields/Router_Name_CP__c.field-meta.xml
<CustomField>
    <fullName>Router_Name_CP__c</fullName>
    <description>Track the Router a Meeting was Booked from. This value only writes when a meeting is booked via Concierge &quot;Inbound Router&quot;. Otherwise, the value will be null.</description>
    <label>Router Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>