force-app/main/default/objects/Activity/fields/Served_Other_Rules__c.field-meta.xml
<CustomField>
    <fullName>Served_Other_Rules__c</fullName>
    <description>This field displays the specific rules within a rule set that were valid when the lead or opportunity was served to the user.</description>
    <inlineHelpText>This field displays the specific rules within a rule set that were valid when the lead or opportunity was served to the user.</inlineHelpText>
    <label>Served Other Rules</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Greeter - SBOB</fullName>
            </value>
            <value>
                <fullName>After Hours - SBOB</fullName>
            </value>
            <value>
                <fullName>Second Day Call - SBOB</fullName>
            </value>
            <value>
                <fullName>APD at Risk Bottom of Funnel - SBOB</fullName>
            </value>
            <value>
                <fullName>APD at Risk Top of Funnel - SBOB</fullName>
            </value>
            <value>
                <fullName>Missed APD - SBOB</fullName>
            </value>
            <value>
                <fullName>Stalled in current onboarding step - SBOB</fullName>
            </value>
            <value>
                <fullName>Event Lead - SBOB</fullName>
            </value>
            <value>
                <fullName>Started Previous Payroll - SBOB</fullName>
            </value>
            <value>
                <fullName>Catch all - SBOB</fullName>
            </value>
            <value>
                <fullName>Missed APD Not Ready to Run - SBOB</fullName>
            </value>
            <value>
                <fullName>Missed APD Ready to Run - SBOB</fullName>
            </value>
            <value>
                <fullName>Upcoming APD - SBOB</fullName>
            </value>
            <value>
                <fullName>Day 30 Stalled in Onboarding - SBOB</fullName>
            </value>
            <value>
                <fullName>Day 7 Stalled in Onboarding - SBOB</fullName>
            </value>
            <value>
                <fullName>Day 4 Stalled in Onboarding - SBOB</fullName>
            </value>
            <value>
                <fullName>Catch All 2 - SBOB</fullName>
            </value>
            <value>
                <fullName>Closed Lost Re Engage - SBOB</fullName>
            </value>
            <value>
                <fullName>Lead Nurture - SBOB</fullName>
            </value>
            <value>
                <fullName>Greeter 0 to 1 - SBOB</fullName>
            </value>
            <value>
                <fullName>After Hours 0 to 1 - SBOB</fullName>
            </value>
            <value>
                <fullName>NBF Greeter - SBOB</fullName>
            </value>
            <value>
                <fullName>NBF Cadence - DSC</fullName>
            </value>
            <value>
                <fullName>Raw All Other Lead Sources - BoR</fullName>
            </value>
            <value>
                <fullName>Benefits Setup Last Updated Today - MMNP</fullName>
            </value>
            <value>
                <fullName>NBF Connect - DSC</fullName>
            </value>
            <value>
                <fullName>After Hours - DSC</fullName>
            </value>
            <value>
                <fullName>Catch all - DSC</fullName>
            </value>
            <value>
                <fullName>Greeter - DSC</fullName>
            </value>
            <value>
                <fullName>NBF After Hours - DSC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>