force-app/main/default/objects/Activity/fields/Served_Up_Rule__c.field-meta.xml
<CustomField>
    <fullName>Served_Up_Rule__c</fullName>
    <description>This field displays the specific rule within a rule set that caused the lead or opportunity to be displayed to the user to be acted upon.</description>
    <inlineHelpText>This field displays the specific rule within a rule set that caused the lead or opportunity to be displayed to the user to be acted upon.</inlineHelpText>
    <label>Served Up Rule</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Greeter - SBOB</fullName>
            </value>
            <value>
                <fullName>After Hours - SBOB</fullName>
            </value>
            <value>
                <fullName>Second Day Call - SBOB</fullName>
            </value>
            <value>
                <fullName>APD at Risk Bottom of Funnel - SBOB</fullName>
            </value>
            <value>
                <fullName>APD at Risk Top of Funnel - SBOB</fullName>
            </value>
            <value>
                <fullName>Missed APD - SBOB</fullName>
            </value>
            <value>
                <fullName>Stalled in current onboarding step - SBOB</fullName>
            </value>
            <value>
                <fullName>Event Lead - SBOB</fullName>
            </value>
            <value>
                <fullName>Started Previous Payroll - SBOB</fullName>
            </value>
            <value>
                <fullName>Catch all - SBOB</fullName>
            </value>
            <value>
                <fullName>Missed APD Not Ready to Run - SBOB</fullName>
            </value>
            <value>
                <fullName>Missed APD Ready to Run - SBOB</fullName>
            </value>
            <value>
                <fullName>Upcoming APD - SBOB</fullName>
            </value>
            <value>
                <fullName>Day 30 Stalled in Onboarding - SBOB</fullName>
            </value>
            <value>
                <fullName>Day 7 Stalled in Onboarding - SBOB</fullName>
            </value>
            <value>
                <fullName>Day 4 Stalled in Onboarding - SBOB</fullName>
            </value>
            <value>
                <fullName>Catch All 2 - SBOB</fullName>
            </value>
            <value>
                <fullName>Closed Lost Re Engage - SBOB</fullName>
            </value>
            <value>
                <fullName>Lead Nurture - SBOB</fullName>
            </value>
            <value>
                <fullName>Greeter 0 to 1 - SBOB</fullName>
            </value>
            <value>
                <fullName>After Hours 0 to 1 - SBOB</fullName>
            </value>
            <value>
                <fullName>NBF Greeter - SBOB</fullName>
            </value>
            <value>
                <fullName>NBF After Hours - SBOB</fullName>
            </value>
            <value>
                <fullName>NBF Connect - SBOB</fullName>
            </value>
            <value>
                <fullName>NBF Upcoming APD - SBOB</fullName>
            </value>
            <value>
                <fullName>NBF Cadence - SBOB</fullName>
            </value>
            <value>
                <fullName>NBF Missed APD - SBOB</fullName>
            </value>
            <value>
                <fullName>Upsell Upcoming APD - SBOB</fullName>
            </value>
            <value>
                <fullName>NBF Upsell Upcoming APD - SBOB</fullName>
            </value>
            <value>
                <fullName>duplicate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>