force-app/main/default/objects/Activity/fields/Served_Up_Time__c.field-meta.xml
<CustomField>
    <fullName>Served_Up_Time__c</fullName>
    <description>This field displays the date and time the lead or opportunity was served up to the user.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>This field displays the date and time the lead or opportunity was served up to the user.</inlineHelpText>
    <label>Served Up Time</label>
    <type>DateTime</type>
</CustomField>