force-app/main/default/objects/Activity/fields/TC_Task_Sub_Description__c.field-meta.xml
<CustomField>
    <fullName>TC_Task_Sub_Description__c</fullName>
    <description>To report Tax credits Sub-Description</description>
    <label>TC Task Sub Description</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>TC_Task_Description__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Call</fullName>
            </value>
            <value>
                <fullName>Cancel Invoice</fullName>
            </value>
            <value>
                <fullName>CG info</fullName>
            </value>
            <value>
                <fullName>CPA Support</fullName>
            </value>
            <value>
                <fullName>Customer Confirm</fullName>
            </value>
            <value>
                <fullName>Discount - Campaign</fullName>
            </value>
            <value>
                <fullName>Discount - Escalation or Pricing</fullName>
            </value>
            <value>
                <fullName>Discount - Nav or Pricing</fullName>
            </value>
            <value>
                <fullName>Doc Type: Expense - Call</fullName>
            </value>
            <value>
                <fullName>Doc Type: Expense - Email</fullName>
            </value>
            <value>
                <fullName>Doc Type: TR - Call</fullName>
            </value>
            <value>
                <fullName>Doc Type: TR - Email</fullName>
            </value>
            <value>
                <fullName>Doc Type: Wage - Call</fullName>
            </value>
            <value>
                <fullName>Doc Type: Wage - Email</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>First-Year R&amp;D</fullName>
            </value>
            <value>
                <fullName>First-Year R&amp;D Analysis</fullName>
            </value>
            <value>
                <fullName>First-Year Revenue</fullName>
            </value>
            <value>
                <fullName>First-Year Revenue Analysis</fullName>
            </value>
            <value>
                <fullName>Follow up</fullName>
            </value>
            <value>
                <fullName>Follow up - Call</fullName>
            </value>
            <value>
                <fullName>Follow up - Email</fullName>
            </value>
            <value>
                <fullName>FYE info</fullName>
            </value>
            <value>
                <fullName>Inbound - Meeting</fullName>
            </value>
            <value>
                <fullName>Inc Date</fullName>
            </value>
            <value>
                <fullName>Inc Date Analysis</fullName>
            </value>
            <value>
                <fullName>Invoice Cancelation</fullName>
            </value>
            <value>
                <fullName>Manual Declaration</fullName>
            </value>
            <value>
                <fullName>Meeting</fullName>
            </value>
            <value>
                <fullName>Outbound - Meeting</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>