force-app/main/default/objects/Activity/fields/Ticket_Status__c.field-meta.xml
<CustomField>
    <fullName>Ticket_Status__c</fullName>
    <description>Ticket status at the time of the task creation.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Ticket status at the time of the task creation.</inlineHelpText>
    <label>Ticket Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>