force-app/main/default/objects/Activity/fields/Time_of_Day__c.field-meta.xml
<CustomField>
    <fullName>Time_of_Day__c</fullName>
    <formula>VALUE( MID( TEXT( CreatedDate - 6/24), 12, 2) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Time of Day</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>