force-app/main/default/objects/Activity/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>This custom field was added to enable dependent picklist values in custom subtype field, this was not supported by standard &apos;Type&apos; and &apos;Subtype&apos; fields.</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Correct Alignment Issue</fullName>
            </value>
            <value>
                <fullName>Correct Missing/Incorrect Enrollment</fullName>
            </value>
            <value>
                <fullName>Correct Plan/Waiting Period</fullName>
            </value>
            <value>
                <fullName>Enter Missing Group/Policy Number</fullName>
            </value>
            <value>
                <fullName>Process Unprocessed Selections</fullName>
            </value>
            <value>
                <fullName>Upload Missing Proof to Gdrive</fullName>
            </value>
            <value>
                <fullName>Upload Pending Item</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Carrier Communication</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>